--- a/src/widgets/Header/Header.css
+++ b/src/widgets/Header/Header.css
@@ -1,6 +1,6 @@
 .box {
-  height: 30em;
-  padding: 0 2em;
+  min-height: 30em;
+  /* padding: 0 2em; */
   display: flex;
   justify-content: center;
   align-items: center;
