--- a/src/widgets/Frame/Frame.css
+++ b/src/widgets/Frame/Frame.css
@@ -1,6 +1,7 @@
 .box-frame {
   display: grid !important;
-  gap: 5em;
+  gap: 3em;
+  margin: 2em 0;
   grid-template-columns: repeat(auto-fill, 25em);
   justify-content: center;
 }
