--- a/src/widgets/Header/Header.css
+++ b/src/widgets/Header/Header.css
@@ -1,4 +1,4 @@
-.box {
+.box-header {
   min-height: 30em;
   padding: 0 2em;
   display: flex;
@@ -11,4 +11,10 @@
   text-align: center;
   font-size: calc(var(--index) * 2.5);
   font-weight: 300;
+}
+
+@media (min-width: 380px) and (max-width: 1280px) {
+  .box-header {
+    min-height: 20em;
+  }
 }
